docs: README.md & refactor: Ganti title

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 <body>
     <main id="main">
         <header class="header">
-            <h1 class="title">Product Gallery</h1>
+            <h1 class="title">DOM Manipulation and Event Listener</h1>
             <p class="description">Browse our collection of products fetched from DummyJSON API</p>
         </header>
         
